@@ -129,9 +129,32 @@
              (else (list #f "string-option: not a string"))))
      #f #f )))
 
+;; font options store fonts as strings a la the X Logical
+;; Font Description. You should always provide a default
+;; value, as currently there seems to be no way to go from
+;; an actual font to a logical font description, and thus
+;; there is no way for the gui to pick a default value.
+(define (gnc:make-font-option
+	 section
+	 name
+	 sort-tag
+	 documentation-string
+	 default-value)
+  (let* ((value default-value)
+         (value->string (lambda () (gnc:value->string value))))
+    (gnc:make-option
+     section name sort-tag 'font documentation-string
+     (lambda () value)
+     (lambda (x) (set! value x))
+     (lambda () default-value)
+     (gnc:restore-form-generator value->string)
+     (lambda (x)
+       (cond ((string? x)(list #t x))
+             (else (list #f "font-option: not a string"))))
+     #f #f )))
+
 ;; currency options use a specialized widget for entering currencies
-;; in the GUI implementation. Currencies must be 3-letter ISO codes
-;; represented as strings.
+;; in the GUI implementation.
 (define (gnc:make-currency-option
 	 section
 	 name
